--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div id="topbar">
-            <img src="/assets/images/itescia.png" alt="Logo de l'ITESCIA" id="logo">
+            <img src="assets/images/itescia.png" alt="Logo de l'ITESCIA" id="logo">
         </div>
 
-        <div id="navbar">
+        <nav>
             <ul>
                 <li><a href="">Accueil</a></li>
-                <li><a href="https://itescia.fr">ITESCIA</a></li>
+                <li><a href="https://www.itescia.fr/" target="_blank">ITESCIA</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
 </body>
 
