Favicon, Titre, Colonne

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
+    <meta charset="utf-8">
+    <title>ITESCIA - Formulaire de contact</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Overpass:200,400,700,900&display=swap&subset=latin-ext"
+        rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
     <header>
         <div id="topbar">
             <img src="assets/images/itescia.png" alt="Logo de l'ITESCIA" id="logo">
+            <h1>Formulaire de <strong>contact</strong></h1>
         </div>
 
         <nav>
@@ -19,6 +27,18 @@
             </ul>
         </nav>
     </header>
+    
+    <div class="formulaire">
+        <div class="colonne" style="background-color:#aaa;">
+          <h2>Column 1</h2>
+          <p>Some text..</p>
+        </div>
+        <div class="colonne" style="background-color:#bbb;">
+          <h2>Column 2</h2>
+          <p>Some text..</p>
+        </div>
+      </div>
+
 </body>
 
 
