--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <div class="formulaire">
         <div class="colonne" style="background-color:#aaa;">
           <h2>Column 1</h2>
@@ -37,7 +37,14 @@
           <h2>Column 2</h2>
           <p>Some text..</p>
         </div>
-      </div>
+    </div>
+
+<footer>
+<p>ITESCIA, établissement de la CCI Paris-Ile-de-France collecte ces données afin de répondre à votre demande et au-delà vous tenir informé des activités de nos services.
+    Vos données sont conservées tant que vous ne vous désinscrivez pas. Vos données ne sont pas communiquées à des tiers, hormis au parrain que vous avez mentionné ci-dessus (point 3).
+    Conformément à la loi du 6 janvier 1978, vous disposez d'un droit d'accès aux données qui vous concernent auprès du Correspondant à la protection de données <a href="mailto:cpdp@cci-paris-idf.fr">cpdp@cci-paris-idf.fr</a>.
+    Vous disposez également d'un droit de modification ou de suppression des mêmes données auprès de <a href="mailto:clil@itescia.fr">clil@itescia.fr</a> et en cas de problème auprès de <a href="mailto:cpdp@cci-paris-idf.fr">cpdp@cci-paris-idf.fr</a>.</p>
+</footer>
 
 </body>
 
