--- a/index.html
+++ b/index.html
@@ -34,8 +34,56 @@
           <p>Some text..</p>
         </div>
         <div class="colonne" style="background-color:#bbb;">
-          <h2>Column 2</h2>
-          <p>Some text..</p>
+            <h2>Column 2</h2>
+            <p>Some text..</p>
+            <h2>Votre scolarité :</h2>
+            <form>
+                <label id="gradeLabel">Niveau de formation actuel  : </label>
+                <select id="grade" name="grade">
+                    <option value="CAP, BEP">CAP, BEP</option>
+                    <option value="Bac">Baccalauréat</option>
+                    <option value="Bac+2">Bac+2</option>
+                    <option value="Bac+3">Bac+3</option>
+                    <option value="Bac+4">Bac+4</option>
+                    <option value="Bac+5">Bac+5</option>
+                    <option value="Bac+8">Bac+8</option>
+                    <option value="Autre">Autre</option>
+                </select>
+                <br />
+                <label id="gradeOther">Autre : </label>
+                <input type="text" id="gradeOtherField" >
+                <br />
+                <label id="lastSchool">Etablissement actuel (nom et ville) : </label>
+                <input type="text" id="lastSchoolField" >
+                <br />
+                <label id="lastDegree">Dernier diplôme obtenu : </label>
+                <input type="text" id="lastDegreeField" >
+
+            </form>
+
+            <h2>Vos autres souhaits de formation à ITESCIA :</h2>
+            <form>
+
+                <label id="secondChoice">N°2  : </label>
+                <input type="text" id="secondChoiceField" >
+                <br />
+                <label id="thirdChoice">N°3  : </label>
+                <input type="text" id="thirdChoiceField" >
+                <br />
+
+            </form>
+
+            <h2>Votre parrain à ITESCIA :</h2>
+            <form>
+
+                <label id="nameReferrer">Nom, prénom</label>
+                <input type="text" id="nameReferrerField" >
+                <br />
+                <label id="formationReferrer">Formation suivie : </label>
+                <input type="text" id="formationReferrerField" >
+                <br />
+
+            </form>
         </div>
     </div>
 
