Début des choix de formations

--- a/index.html
+++ b/index.html
@@ -28,23 +28,101 @@
         </nav>
     </header>
 
-    <div class="formulaire">
-        <div class="colonne" style="background-color:#aaa;">
-          <h2>Column 1</h2>
-          <p>Some text..</p>
-        </div>
-        <div class="colonne" style="background-color:#bbb;">
-          <h2>Column 2</h2>
-          <p>Some text..</p>
-        </div>
-    </div>
+    <section class="formulaire">
+        <article class="colonne">
 
-<footer>
-<p>ITESCIA, établissement de la CCI Paris-Ile-de-France collecte ces données afin de répondre à votre demande et au-delà vous tenir informé des activités de nos services.
-    Vos données sont conservées tant que vous ne vous désinscrivez pas. Vos données ne sont pas communiquées à des tiers, hormis au parrain que vous avez mentionné ci-dessus (point 3).
-    Conformément à la loi du 6 janvier 1978, vous disposez d'un droit d'accès aux données qui vous concernent auprès du Correspondant à la protection de données <a href="mailto:cpdp@cci-paris-idf.fr">cpdp@cci-paris-idf.fr</a>.
-    Vous disposez également d'un droit de modification ou de suppression des mêmes données auprès de <a href="mailto:clil@itescia.fr">clil@itescia.fr</a> et en cas de problème auprès de <a href="mailto:cpdp@cci-paris-idf.fr">cpdp@cci-paris-idf.fr</a>.</p>
-</footer>
+            <h2>Votre 1er choix de formation à l'ITESCIA :</h2>
+            <form id="premierchoix">
+                <div id="gestion" class="formations">
+                    <h3>Gestion</h3>
+
+                    <h4>BAC+2 :</h4>
+                    <input type="radio" value="BTS CG"><strong>BTS CG</strong>
+
+                    <h4>BAC+3 :</h4>
+                    <strong>DCG</strong><br>
+                    <input type="radio" value="DCG L1">Entrée en L1
+                    <input type="radio" value="DCG L2">Entrée en L2
+
+                    <h4>BAC+4 :</h4>
+                    <strong>Contrôleur de Gestion</strong><br>
+                    <input type="radio" value="CG L3">Entrée en L3
+                    <input type="radio" value="CG M1">Entrée en M1
+
+                    <h4>BAC+5 :</h4>
+                    <input type="radio" value="DSCG"><strong>DSCG</strong> (Entrée en M1)
+                </div>
+
+
+                <div id="management" class="formations">
+                    <h3>Management</h3>
+                    <h4>BAC+4 :</h4>
+                    <strong>Responsable de systèmes de management QHSE</strong><br>
+                    <input type="radio" value="QHSE L3">Entrée en L3
+                    <input type="radio" value="QHSE M1">Entrée en M1
+
+                    <br>
+                    <strong>Responsable Ressources Humaines</strong><br>
+                    <input type="radio" value="RRH L3">Entrée en L3
+                    <input type="radio" value="RRH M1">Entrée en M1
+
+                    <h4>BAC+5 :</h4>
+                    <input type="radio" value="MQPI"><strong>Manager Qualité et Processus Intelligents</strong> (Entrée
+                    en M2)
+                </div>
+
+                <div id="informatique" class="formations">
+                    <h3>Informatique</h3>
+
+                    <h4>BAC+2 :</h4>
+                    <input type="radio" value="SIO"><strong>BTS SIO, option SISR ou SLAM</strong>
+                    <br>
+                    <input type="radio" value="CODEUR"><strong>Codeur informatique</strong><br>
+                    <strong>En 3 ans en alternance</strong>
+                    <input type="radio" value="CODEUR CERGY 3ANS">à Cergy
+                    <input type="radio" value="CODEUR PARIS 3ANS">à Paris
+                    <br>
+                    <strong>En 1 an en temps plein</strong> (payant)
+                    <input type="radio" value="CODEUR CERGY 1AN">à Cergy
+                    <input type="radio" value="CODEUR PARIS 1AN">à Paris
+
+
+                    <h4>BAC+3 (en 1 an) :</h4>
+                    <input type="radio" value="LIG"><strong>Licence d’Informatique générale</strong>
+                    <br>
+                    <input type="radio" value="SOLUTION MOBILE"><strong>Concepteur développeur de solutions mobiles et connectées</strong><br>
+                    <strong>En alternance</strong>
+                    <input type="radio" value="CODEUR CERGY 3ANS">à Cergy
+                    <br>
+                    <strong>En temps plein</strong> (payant)
+                    <input type="radio" value="CODEUR PARIS 3ANS">à Paris
+
+
+                </div>
+                <div id="continue" class="formations">
+                    <h3>Formation continue - VAE</h3>
+                </div>
+
+            </form>
+
+        </article>
+        <article class="colonne">
+            <h2>Vos coordonnées :</h2>
+        </article>
+    </section>
+
+    <footer>
+        <p>ITESCIA, établissement de la CCI Paris-Ile-de-France collecte ces données afin de répondre à votre demande et
+            au-delà vous tenir informé des activités de nos services.
+            Vos données sont conservées tant que vous ne vous désinscrivez pas. Vos données ne sont pas communiquées à
+            des tiers, hormis au parrain que vous avez mentionné ci-dessus (point 3).
+            Conformément à la loi du 6 janvier 1978, vous disposez d'un droit d'accès aux données qui vous concernent
+            auprès du Correspondant à la protection de données <a
+                href="mailto:cpdp@cci-paris-idf.fr">cpdp@cci-paris-idf.fr</a>.
+            Vous disposez également d'un droit de modification ou de suppression des mêmes données auprès de <a
+                href="mailto:clil@itescia.fr">clil@itescia.fr</a> et en cas de problème auprès de <a
+                href="mailto:cpdp@cci-paris-idf.fr">cpdp@cci-paris-idf.fr</a>.</p>
+    </footer>
 
 </body>
 
