--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     <h4>BAC+3 (en 1 an) :</h4>
                     <input type="radio" value="LIG"><strong>Licence d’Informatique générale</strong>
                     <br>
-                    <input type="radio" value="SOLUTION MOBILE"><strong>Concepteur développeur de solutions mobiles et connectées</strong><br>
+                    <input type="radio" value="SOLUTION MOBILE"><strong>Concepteur développeur de solutions mobiles et
+                        connectées</strong><br>
                     <strong>En alternance</strong>
                     <input type="radio" value="CODEUR CERGY 3ANS">à Cergy
                     <br>
@@ -107,9 +108,56 @@
 
         </article>
         <article class="colonne">
+            <h2>Vos coordonnées :</h2>
+            <input type="checkbox" name="Mme">Mme
+            <input type="checkbox" idname="M.">Mr
+            <input type="checkbox" name="Autre">Autre
+            <br>
+
+            <label for="name">Nom :</label>
+            <input type="text" name="nom">
+            <br>
+
+            <label for="name">Prénom :</label>
+            <input type="text" name="prénom">
+            <br>
+
+            <label for="name">Adresse:</label>
+            <input type="text" name="Adresse">
+            <br>
+
+            <label for="name">CP:</label>
+            <input type="text" name="prénom">
+
+            <label for="name">Ville :</label>
+            <input type="text" name="prénom">
+            <br>
+
+
+            <label for="name">Tel. fixe :</label>
+            <input type="text" name="telfixe">
+            <br>
+
+            <label for="name">Portable :</label>
+            <input type="text" name="Portable">
+            <br>
+
+            <label for="name">Email :</label>
+            <input type="text" name="email">
+            <br>
+
+            <label for="name">Date de naissance :</label>
+            <input type="date" name="datenaissance">
+            <br>
+
+            Nationalité : <input type="checkbox" name="française">Française
+            <input type="checkbox" name="UE">UE
+            <input type="checkbox" name="HorsUE">Hors UE
+
+
             <h2>Votre scolarité :</h2>
             <form>
-                <label id="gradeLabel">Niveau de formation actuel  : </label>
+                <label id="gradeLabel">Niveau de formation actuel : </label>
                 <select id="grade" name="grade">
                     <option value="CAP, BEP">CAP, BEP</option>
                     <option value="Bac">Baccalauréat</option>
@@ -122,24 +170,24 @@
                 </select>
                 <br />
                 <label id="gradeOther">Autre : </label>
-                <input type="text" id="gradeOtherField" >
+                <input type="text" id="gradeOtherField">
                 <br />
                 <label id="lastSchool">Etablissement actuel (nom et ville) : </label>
-                <input type="text" id="lastSchoolField" >
+                <input type="text" id="lastSchoolField">
                 <br />
                 <label id="lastDegree">Dernier diplôme obtenu : </label>
-                <input type="text" id="lastDegreeField" >
+                <input type="text" id="lastDegreeField">
 
             </form>
 
             <h2>Vos autres souhaits de formation à ITESCIA :</h2>
             <form>
 
-                <label id="secondChoice">N°2  : </label>
-                <input type="text" id="secondChoiceField" >
+                <label id="secondChoice">N°2 : </label>
+                <input type="text" id="secondChoiceField">
                 <br />
-                <label id="thirdChoice">N°3  : </label>
-                <input type="text" id="thirdChoiceField" >
+                <label id="thirdChoice">N°3 : </label>
+                <input type="text" id="thirdChoiceField">
                 <br />
 
             </form>
@@ -148,10 +196,10 @@
             <form>
 
                 <label id="nameReferrer">Nom, prénom</label>
-                <input type="text" id="nameReferrerField" >
+                <input type="text" id="nameReferrerField">
                 <br />
                 <label id="formationReferrer">Formation suivie : </label>
-                <input type="text" id="formationReferrerField" >
+                <input type="text" id="formationReferrerField">
                 <br />
 
             </form>
