--- a/index.html
+++ b/index.html
@@ -102,6 +102,53 @@
                 </div>
                 <div id="continue" class="formations">
                     <h3>Formation continue - VAE</h3>
+                    <form>
+
+                        <label id="CDGLabel">Contrôleur de Gestion</label>
+                        <input type="radio" id="CDGVAE" name="VAE" value="VAE">
+                        <label for="CDGVAE">VAE</label>
+                        <input type="radio" id="CDGPT" name="VAE" value="Part-time">
+                        <label for="CDGPT">Part-time</label>
+                        <br />
+
+                        <label id="RMQHSELabel">Responsable  Management  QHSE : </label>
+                        <input type="radio" id="RMQHSEVAE" name="VAE" value="VAE">
+                        <label for="RMQHSEVAE">VAE</label>
+                        <input type="radio" id="RMQHSEPT" name="VAE" value="Part-time">
+                        <label for="RMQHSEPT">Part-time</label>
+                        <br />
+
+                        <label id="MIILabel">Manager en Ingénierie  Informatique  : </label>
+                        <input type="radio" id="MIIVAE" name="VAE" value="VAE">
+                        <label for="MIIVAE">VAE</label>
+                        <input type="radio" id="MIIPT" name="VAE" value="Part-time">
+                        <label for="MIIPT">Part-time</label>
+                        <br />
+                        <label id="BALabel">Business Analyst  </label>
+                        <input type="radio" id="BAPT" name="VAE" value="Part-time">
+                        <label for="BAPT">Part-time</label>
+                        <br />
+
+                        <label id="MSRILabel">Manager de la sécurité des risques de l’information </label>
+                        <input type="radio" id="MSRIPT" name="VAE" value="Part-time">
+                        <label for="MSRIPT">Part-time</label>
+
+                        <h4>Votre situation</h4>
+
+                        <input type="radio" id="employee" name="situation" >
+                        <label for="employee">Salarié(e),  de  l’entreprise  : </label>
+                        <input type="text" id="employeeCompany" name="company" >
+                        <br />
+                        <input type="radio" id="seeker" name="situation" >
+                        <label for="seeker">Demandeur  d’emploi</label>
+                        <br />
+                        <input type="radio" id="individuals" name="situation" >
+                        <label for="individuals">Particulier </label>
+                        <br />
+                        <input type="radio" id="other" name="otherCheck" >
+                        <label for="other">Autre : </label>
+                        <input type="text" id="otherField" name="other" >
+                    </form>
                 </div>
 
             </form>
