--- a/index.html
+++ b/index.html
@@ -103,6 +103,60 @@
 
                 </div>
 
+                <div id="continue" class="formations">
+                    <h3>Formation continue - VAE</h3>
+                    <form>
+
+                        <label id="CDGLabel"><strong>Contrôleur de Gestion</strong></label>
+                        <input type="radio" id="CDGVAE" name="VAE" value="VAE">
+                        <label for="CDGVAE">VAE</label>
+                        <input type="radio" id="CDGPT" name="VAE" value="Part-time">
+                        <label for="CDGPT">Part-time</label>
+                        <br />
+
+                        <label id="RMQHSELabel"><strong>Responsable Management QHSE : </strong></label>
+                        <input type="radio" id="RMQHSEVAE" name="VAE" value="VAE">
+                        <label for="RMQHSEVAE">VAE</label>
+                        <input type="radio" id="RMQHSEPT" name="VAE" value="Part-time">
+                        <label for="RMQHSEPT">Part-time</label>
+                        <br />
+
+                        <label id="MIILabel"><strong>Manager en Ingénierie Informatique : </strong></label>
+                        <input type="radio" id="MIIVAE" name="VAE" value="VAE">
+                        <label for="MIIVAE">VAE</label>
+                        <input type="radio" id="MIIPT" name="VAE" value="Part-time">
+                        <label for="MIIPT">Part-time</label>
+                        <br />
+                        <label id="BALabel"><strong>Business Analyst </strong></label>
+                        <input type="radio" id="BAPT" name="VAE" value="Part-time">
+                        <label for="BAPT">Part-time</label>
+                        <br />
+
+                        <label id="MSRILabel"><strong>Manager de la sécurité des risques de
+                                l’information</strong></label>
+                        <input type="radio" id="MSRIPT" name="VAE" value="Part-time">
+                        <label for="MSRIPT">Part-time</label>
+
+                        <h4>Votre situation</h4>
+
+                        <input type="radio" id="employee" name="situation">
+                        <label for="employee">Salarié(e), de l’entreprise : </label>
+                        <input type="text" id="employeeCompany" name="company">
+                        <br />
+                        <input type="radio" id="seeker" name="situation">
+                        <label for="seeker">Demandeur d’emploi</label>
+                        <br />
+                        <input type="radio" id="individuals" name="situation">
+                        <label for="individuals">Particulier </label>
+                        <br />
+                        <input type="radio" id="other" name="situation">
+                        <label for="other">Autre : </label>
+                        <input type="text" id="otherField" name="other">
+
+
+                    </form>
+                </div>
+
             </form>
 
         </article>
@@ -205,58 +259,7 @@
 
             <br>
 
-            <div id="continue" class="formations">
-                <h3>Formation continue - VAE</h3>
-                <form>
 
-                    <label id="CDGLabel"><strong>Contrôleur de Gestion</strong></label>
-                    <input type="radio" id="CDGVAE" name="VAE" value="VAE">
-                    <label for="CDGVAE">VAE</label>
-                    <input type="radio" id="CDGPT" name="VAE" value="Part-time">
-                    <label for="CDGPT">Part-time</label>
-                    <br />
-
-                    <label id="RMQHSELabel"><strong>Responsable Management QHSE : </strong></label>
-                    <input type="radio" id="RMQHSEVAE" name="VAE" value="VAE">
-                    <label for="RMQHSEVAE">VAE</label>
-                    <input type="radio" id="RMQHSEPT" name="VAE" value="Part-time">
-                    <label for="RMQHSEPT">Part-time</label>
-                    <br />
-
-                    <label id="MIILabel"><strong>Manager en Ingénierie Informatique : </strong></label>
-                    <input type="radio" id="MIIVAE" name="VAE" value="VAE">
-                    <label for="MIIVAE">VAE</label>
-                    <input type="radio" id="MIIPT" name="VAE" value="Part-time">
-                    <label for="MIIPT">Part-time</label>
-                    <br />
-                    <label id="BALabel"><strong>Business Analyst </strong></label>
-                    <input type="radio" id="BAPT" name="VAE" value="Part-time">
-                    <label for="BAPT">Part-time</label>
-                    <br />
-
-                    <label id="MSRILabel"><strong>Manager de la sécurité des risques de l’information</strong></label>
-                    <input type="radio" id="MSRIPT" name="VAE" value="Part-time">
-                    <label for="MSRIPT">Part-time</label>
-
-                    <h4>Votre situation</h4>
-
-                    <input type="radio" id="employee" name="situation">
-                    <label for="employee">Salarié(e), de l’entreprise : </label>
-                    <input type="text" id="employeeCompany" name="company">
-                    <br />
-                    <input type="radio" id="seeker" name="situation">
-                    <label for="seeker">Demandeur d’emploi</label>
-                    <br />
-                    <input type="radio" id="individuals" name="situation">
-                    <label for="individuals">Particulier </label>
-                    <br />
-                    <input type="radio" id="other" name="situation">
-                    <label for="other">Autre : </label>
-                    <input type="text" id="otherField" name="other">
-
-
-                </form>
-            </div>
         </article>
     </section>
 
