--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
                     <label for="other">Autre : </label>
                     <input type="text" id="otherField" name="other">
 
-
                 </div>
 
             </form>
@@ -159,50 +158,50 @@
         </article>
         <article class="colonne">
             <h2>Vos coordonnées :</h2>
-            <input type="checkbox" name="Mme">Mme
-            <input type="checkbox" idname="M.">Mr
-            <input type="checkbox" name="Autre">Autre
+            <input type="radio" id="Mme" name="genre">Mme
+            <input type="radio" id="M." name="genre">Mr
+            <input type="radio" id="Autre" name="genre">Autre
             <br>
 
-            <label for="name">Nom :</label>
+            <label for="nom">Nom :</label>
             <input type="text" id="nom">
             <br>
 
-            <label for="name">Prénom :</label>
+            <label for="prenom">Prénom :</label>
             <input type="text" id="prenom">
             <br>
 
-            <label for="name">Adresse :</label>
+            <label for="adresse">Adresse :</label>
             <input type="text" id="adresse">
             <br>
 
-            <label for="name">Code postal :</label>
+            <label for="codepostal">Code postal :</label>
             <input type="text" id="codepostal">
 
-            <label for="name">Ville :</label>
-            <input type="text" name="prénom">
+            <label for="ville">Ville :</label>
+            <input type="text" name="ville">
             <br>
 
 
-            <label for="name">Téléphone fixe :</label>
+            <label for="telfixe">Téléphone fixe :</label>
             <input type="tel" name="telfixe">
             <br>
 
-            <label for="name">Portable :</label>
+            <label for="telportable">Portable :</label>
             <input type="tel" name="telportable">
             <br>
 
-            <label for="name">Email :</label>
+            <label for="email">Email :</label>
             <input type="email" name="email">
             <br>
 
-            <label for="name">Date de naissance :</label>
+            <label for="datenaissance">Date de naissance :</label>
             <input type="date" name="datenaissance">
             <br>
 
-            Nationalité : <input type="checkbox" name="française">Française
-            <input type="checkbox" name="UE">UE
-            <input type="checkbox" name="HorsUE">Hors UE
+            Nationalité : <input type="radio" id="française" name="nationalite">Française
+            <input type="radio" id="UE" name="nationalite">UE
+            <input type="radio" id="HorsUE" name="nationalite">Hors UE
 
 
             <h2>Votre scolarité :</h2>
@@ -255,7 +254,6 @@
             </form>
 
             <br>
-
 
         </article>
     </section>
