fix missing label

--- a/index.html
+++ b/index.html
@@ -76,29 +76,28 @@
                     <h3>Informatique</h3>
 
                     <h4>BAC+2 :</h4>
-                    <input type="radio" id="SIO" name="formations"><strong>BTS SIO, option SISR ou SLAM</strong>
+                    <input type="radio" id="SIO" name="formations"> <label for="SIO"><strong>BTS SIO, option SISR ou SLAM</strong></label>
                     <br>
 
                     <strong>Codeur informatique</strong><br>
                     <em>En 3 ans en alternance</em>
-                    <input type="radio" id="CODC3" name="formations">à Cergy
-                    <input type="radio" id="CODP3" name="formations">à Paris
+                    <input type="radio" id="CODC3" name="formations"><label for="CODC3">à Cergy</label>
+                    <input type="radio" id="CODP3" name="formations"><label for="CODP3">à Paris</label>
                     <br>
                     <em>En 1 an en temps plein</em> (payant)
-                    <input type="radio" id="CODC1" name="formations">à Cergy
-                    <input type="radio" id="CODP1" name="formations">à Paris
+                    <input type="radio" id="CODC1" name="formations"><label for="CODC1">à Cergy</label>
+                    <input type="radio" id="CODP1" name="formations"><label for="CODP1">à Paris</label>
 
 
                     <h4>BAC+3 (en 1 an) :</h4>
-                    <input type="radio" id="LIG" name="formations"><strong>Licence d’Informatique générale</strong>
+                    <input type="radio" id="LIG" name="formations"><label for="LIG"><strong>Licence d’Informatique générale</strong></label>
                     <br>
                     <strong>Concepteur développeur de solutions mobiles et connectées</strong><br>
                     <em>En alternance</em>
-                    <input type="radio" id="MOBILCERGY 3ANS" name="formations">à Cergy
+                    <input type="radio" id="CDMC3" name="formations"><label for="CDMC3">à Cergy</label>
                     <br>
                     <em>En temps plein</em> (payant)
-                    <input type="radio" id="CODEUR PARIS 3ANS" name="formations">à Paris
-
+                    <input type="radio" id="CP3" name="formations"><label for="CP3">à Paris</label>
 
                 </div>
 
